Kubernetes/EmailService-API-Deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: emailservice-api
  name: emailservice-api
  namespace: emailservice-api
spec:
  revisionHistoryLimit: 3
  replicas: 3
  selector:
    matchLabels:
      run: emailservice-api
  template:
    metadata:
      labels:
        run: emailservice-api
    spec:
      volumes:
        - name: ssl-cert-volume
          secret:
            secretName: ssl-cert
      containers:
        - name: emailservice-api
          image: ghcr.io/ninepiece2/emailservice-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: ssl-cert-volume
              mountPath: "/etc/ssl/certs"
              readOnly: true
---

apiVersion: v1
kind: Service
metadata:
  name: emailservice-api-service
  namespace: emailservice-api
spec:
  selector:
    run: emailservice-api
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emailservice-api-ingress
  annotations:
    haproxy-ingress.github.io/backend-protocol: "https"
spec:
  ingressClassName: haproxy
  rules:
    - host: emailserviceapi.romitsagu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emailservice-api-service
                port:
                  number: 443
